--- a/Diploma-Final-Year-Project.html
+++ b/Diploma-Final-Year-Project.html
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="main.html" class="logo d-flex align-items-center">
+      <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo-inverted.jpg" alt="">
         <h1 class="sitename">Farees Nazreen</h1>
@@ -49,9 +49,9 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="main.html">Home<br></a></li> 
-          <li><a href="main.html#about">About</a></li>
-          <li class="dropdown"><a href="main.html#projects"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="index.html">Home<br></a></li> 
+          <li><a href="index.html#about">About</a></li>
+          <li class="dropdown"><a href="index.html#projects"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="Bachelor-Thesis.html">Bachelor Thesis</a></li>
               <li><a href="Team-Oriented-Project-Study.html">Team Oriented Project Study</a></li>
@@ -61,9 +61,9 @@
               <li><a href="Diploma-Final-Year-Project.html">Diploma Final Year Project</a></li>
             </ul>
           </li>
-          <li><a href="main.html#awards&achievements">Awards & Achievements</a></li>
-          <li><a href="main.html#faq">FAQ</a></li>
-          <li><a href="main.html#contact">Contact</a></li>
+          <li><a href="index.html#awards&achievements">Awards & Achievements</a></li>
+          <li><a href="index.html#faq">FAQ</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -79,8 +79,8 @@
         <h1 class="mb-2 mb-lg-0">Diploma Final Year Project</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="main.html">Home</a></li>
-            <li><a href="main.html#projects">Projects </a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#projects">Projects </a></li>
             <li class="current">Diploma Final Year Project</li>
           </ol>
         </nav>
