Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Wan Muhammad Farees Bin Nazreen</span></p>
                 <p><strong>Profile: </strong> <span>Mechatronics Engineering Graduate</span></p>
-                <p><strong>Frelance: </strong> <span>Developer, CAD Designer, Presenter & Photographer</span></p>
+                <p><strong>Freelance: </strong> <span>Developer, CAD Designer, Presenter & Photographer</span></p>
                 <p><strong>Address: </strong> <span>Kota Bharu, Malaysia</span></p>
                 <p><strong>Email: </strong> <span>wmfareesnazreen@gmail.com</span></p>
                 <p><strong>LinkedIn: </strong> <span>https//www.linkedin.com/in/fareesnazreen</span></p>
